[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vism_lib"
version = "0.1.16"
authors = [
  { name="atrivisc", email="atrivisc.shawl130@passmail.com" },
]
description = "Library for vism CA and ACME"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["vism"]
dependencies = [
    "python-pkcs11==0.9.4",
    "yaml-pydantic-dataclass==0.1.2",
    "pydantic==2.13.4",
    "PyMySQL==1.2.0",
    "aio_pika==9.6.2",
    "aioboto3==15.5.0",
    "sqlalchemy==2.0.49"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/atrivisc/vism-lib"
"Repository" = "https://github.com/atrivisc/vism-lib.git"
"Bug Tracker" = "https://github.com/atrivisc/vism-lib/issues"

[tool.setuptools.packages.find]
where = ["src"]
